--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,17 @@
     <modules>
         <module>seata-at</module>
         <module>seata-tcc-transfer</module>
+      <module>seata-tcc-spring-cloud</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.vbobot.common</groupId>
+                <artifactId>common-utils</artifactId>
+                <version>1.6.0</version>
+            </dependency>
+
             <!-- https://mvnrepository.com/artifact/com.alibaba.cloud/spring-cloud-alibaba-seata -->
             <!-- spring-cloud-alibaba-seata使用的seata-spring-boot-starter，没有创建DataSourceProxy的自动装配 -->
             <dependency>
