--- a/seata-tcc-spring-cloud/seata-tcc-spring-cloud-order/src/main/resources/application.yml
+++ b/seata-tcc-spring-cloud/seata-tcc-spring-cloud-order/src/main/resources/application.yml
@@ -29,7 +29,7 @@ eureka:
 
 feign:
   hystrix:
-    enabled: true
+    enabled: false
 #==================================================== Eureka-feign ====================================================
 
 logging:
