change: 修改tcc demo的实现方式

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>seata-at</module>
         <module>seata-tcc-transfer</module>
       <module>seata-tcc-spring-cloud</module>
+      <module>seata-common</module>
     </modules>
 
     <dependencyManagement>
